change html to doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<HTML>
+<!DOCTYPE html>
     <!Foundation Page for building our JavaScript programs>
         <HEAD>
             <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
