default to index css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <HEAD>
             <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
             <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-            <LINK rel="stylesheet" type='text/css' href="Default CSS.css">
+            <LINK rel="stylesheet" type='text/css' href="index.css">
             <TITLE>Approximating PI</TITLE>
             <!Change Title to name of Proj.>
         </HEAD>
